--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -18,6 +18,61 @@
                 {% endif %}
             {% endif %}
         });
+        // order_item_status
+        $(function(){
+            var count = 0;
+            {% for order_items in order_item_status_list %}
+                {% autoescape off %}
+                {% for order_item in order_items  %}
+                    var counts = [0,0,0,0,0,0];
+                    var temp = '{{ order_item.status }}'
+                    if(temp=='paid'){
+                        counts[0]++;
+                        counts[1]++;
+                    }else if(temp=='refunded'){
+                        counts[0]++;
+                        counts[5]++;
+                    }else if(temp=='processing'){
+                        counts[0]++;
+                        counts[2]++;
+                    }else if(temp=='wait_confirm'){
+                        counts[0]++;
+                        counts[3]++;
+                    }else if(temp=='request_refund'){
+                        counts[0]++;
+                        counts[5]++;
+                    }else if(temp=='finished'){
+                        counts[0]++;
+                        counts[4]++;
+                    }else{
+                    }
+                {% endfor %}
+                {% endautoescape %}
+                $(".product-item").each(function(index){
+                    if(index==count){
+                        $(this).find('.order_item_ul li').each(function(index,item){ //반복문 조건자 선택 및 인자값 이름 선언
+                            if(index==0){
+                                $(item).text('전체'+'('+counts[index]+')'); //인자값 활용
+                            }
+                            else if(index==1){
+                                $(item).text('작업대기'+'('+counts[index]+')'); //인자값 활용
+                            }else if(index==2){
+                                $(item).text('작업진행'+'('+counts[index]+')'); //인자값 활용
+                            }else if(index==3){
+                                $(item).text('작업완료'+'('+counts[index]+')'); //인자값 활용
+                            }else if(index==4){
+                                $(item).text('거래완료'+'('+counts[index]+')'); //인자값 활용
+                            }else if(index==5){
+                                $(item).text('취소'+'('+counts[index]+')'); //인자값 활용
+                            }
+                        });
+                    }
+                });
+                count++;
+            {% endfor %}
+        });
+
+        // upload part
     </script>
 {% endblock %}
 
@@ -34,36 +89,82 @@
         <div class="dashboard-product-manage">
             {% for item in product_list %}
                 <div class="product-item">
-                    <div class="item-image">
-                        <img src="{{ item.get_image_url }}">
-                    </div>
-                    <div class="item-title">
-                        <h3>{{ item }}</h3>
-                        <div class="item-meta">
-                            <p>{{ item.updated|date:"Y.m.d" }}</p>
+                    <div class="item_top">
+                        <div class="item_top_image" data-color="{{ item.sns_type_color }}">
+                            <div class="circle-wrapper">
+                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                <ul class="circle">
+                                    <li class="circle-list">
+                                        <div class="circle-text">1</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">2</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">3</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">4</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">5</div>
+                                    </li>
+                                    <div class="circle-mask2">
+                                        <div class="circle-mask2-text">
+                                            <span style="font-size:1.3em;">50</span>
+                                            <span style="font-size:1em;">원</span>
+                                        </div>
+                                    </div>
+                                </ul>
+                                <div class="cash">
+                                    <span class="cash-price" style="font-size:1em; color:grey;" data-price="{{ item.price }}">
+                                        <span class="item-money">{{ item.price }}</span>원
+                                        {% if item.manuscript_price > 0 or item.highrank_price > 0 %}
+                                            ~
+                                        {% endif %}
+                                    </span>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="item-rating" data-rating="{{ list.item.rating }}">
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                    </div>
-                    <div class="dashboard-item-more">
-                        <i class="fa fa-angle-down" aria-hidden="true"></i>
-                    </div>
-                    <div class="dashboard-item-popup">
-                        <ul>
-                            <li id="popup-edit">
-                                <a href="{% url 'product_change' product_id=item.id %}">수정하기</a>
-                            </li>
-                            <li id="popup-delete">
-                                <form action="{% url 'product_delete' %}">
-                                    <input type="hidden" name="delete_product" value="{{ item.id }}">
-                                    <input type="submit" value="삭제하기">
+                        <div class="item_top_content">
+                            <div class="content_title">
+                                {{ item.id }}
+                                {{ item.oneline_intro }}
+                            </div>
+                            <div class="content_detail">
+                                {{ item.price }}원
+                                {{ item.created|date:"Y.m.d" }}
+                            </div>
+                        </div>
+                        <div class="item_top_btns">
+                            <div class="item_top_btns_content btn">
+                                <form action="{% url 'product_change' item.id %}">
+                                    <input class="product_btn edit" type="image" src="/static/img/edit.png">
                                 </form>
-                            </li>
+                                <form action="{% url 'product_delete' item.id %}">
+                                    <input class="product_btn delete" type="image" src="/static/img/cancle.png">
+                                </form>
+                            </div>
+                            <div class="item_top_btns_content status">
+                                <div class="approval_status">
+                                    {% if item.product_status == 'ready' %}
+                                        승인중
+                                    {% else %}
+                                        승인완료
+                                    {% endif %}
+
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                    <div class="item_bottom">
+                        <ul class="order_item_ul">
+                            <li>전체</li>
+                            <li>작업대기</li>
+                            <li>작업진행</li>
+                            <li>작업완료</li>
+                            <li>거래완료</li>
+                            <li>취소</li>
                         </ul>
                     </div>
                 </div>
