--- a/templates/account/dashboard_purchase.html
+++ b/templates/account/dashboard_purchase.html
@@ -21,11 +21,14 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                 } else {
                     $('.mileage-input input').autoNumeric('set', '{{ user.mileage }}');
                 }
-
-                var total = parseInt({{ order.order_total }}) - parseInt({{ user.mileage }});
-                if (total < 0) {
-                    total = 0;
+                var point = $('.pay-info .discount #point').val();
+                var sub_total = parseInt({{ order.order_total }}) - parseInt(point);
+                var mileage = $('.mileage-input input').autoNumeric('get');
+                if (mileage > sub_total) {
+                    $('.mileage-input input').val(sub_total);
+                    mileage = $('.mileage-input input').autoNumeric('get');
                 }
+                var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
                 var _total = total + '<span>원</span>';
 
                 $('.billing-info .total h1').html(_total).digits();
@@ -38,29 +41,48 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                 } else {
                     $('.point-input input').autoNumeric('set', '{{ user.point }}');
                 }
-
-                var total = parseInt({{ order.order_total }}) - parseInt({{ user.point }});
-                if (total < 0) {
-                    total = 0;
+                var mileage = $('.pay-info .discount #mileage').val();
+                var sub_total = parseInt({{ order.order_total }}) - parseInt(mileage);
+                var point = $('.point-input input').autoNumeric('get');
+                if (point > sub_total) {
+                    $('.point-input input').val(sub_total);
+                    mileage = $('.point-input input').autoNumeric('get');
                 }
+                var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
                 var _total = total + '<span>원</span>';
 
                 $('.billing-info .total h1').html(_total).digits();
             });
 
-            // 결제금액에 사용 적립금/포인트 적용
-            $(document).ready(function () {
-                $('.pay-info .discount').on('keyup', function () {
-                    var mileage = $('.pay-info .discount #mileage').val();
-                    var point = $('.pay-info .discount #point').val();
+            // 결제금액에 사용 적립금 적용
+            $('.pay-info .discount #mileage').on('keyup', function () {
+                var point = $('.pay-info .discount #point').val();
+                var sub_total = parseInt({{ order.order_total }}) - parseInt(point);
+                var mileage = $(this).autoNumeric('get');
+                if (mileage > sub_total) {
+                    $(this).val(sub_total);
+                    mileage = $(this).autoNumeric('get');
+                }
+                var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                var _total = total + '<span>원</span>';
 
-                    var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
-                    var _total = total + '<span>원</span>';
-
-                    $('.billing-info .total h1').html(_total).digits();
-                });
+                $('.billing-info .total h1').html(_total).digits();
             });
 
+            // 결제금액에 사용 포인트 적용
+            $('.pay-info .discount #point').on('keyup', function () {
+                var mileage = $('.pay-info .discount #mileage').val();
+                var sub_total = parseInt({{ order.order_total }}) - parseInt(mileage);
+                var point = $(this).autoNumeric('get');
+                if (point > sub_total) {
+                    $(this).val(sub_total);
+                    point = $(this).autoNumeric('get');
+                }
+                var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                var _total = total + '<span>원</span>';
+
+                $('.billing-info .total h1').html(_total).digits();
+            });
 
             $('.dashboard-purchase-bill .dashboard-charge-button').on('click', function (e) {
                 var is_checked = $('.pay-info .pay-option input[type="radio"]').is(':checked');
