--- a/templates/account/dashboard_question.html
+++ b/templates/account/dashboard_question.html
@@ -24,15 +24,15 @@
         <div class="question_wrapper">
             <div class="question_nav">
                 <ul>
-                    <li><button>전체</button></li>
-                    <li><button>이용</button></li>
-                    <li><button>판매자</button></li>
-                    <li><button>구매자</button></li>
-                    <li><button>신고</button></li>
-                    <li><button>기타</button></li>
+                    <li><button class="active" id="btn_entire">전체</button></li>
+                    <li><button id="btn_usage">이용</button></li>
+                    <li><button id="btn_seller">판매자</button></li>
+                    <li><button id="btn_buyer">구매자</button></li>
+                    <li><button id="btn_report">신고</button></li>
+                    <li><button id="btn_etc">기타</button></li>
                 </ul>
             </div>
-            <div class="question_content">
+            <div class="question_content seller">
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
                         <img src="/static/img/search.png">
@@ -40,17 +40,67 @@
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
                     <div class="question_content_text">
-                        {% include 'account/auth/auth_paper_3.html' %}
+                        {% include 'question/question_seller_1.html' %}
                     </div>
                 </div>
                 <div class="question_content_each">
                     <div class="question-content-title-wrapper">
                         <img src="/static/img/search.png">
-                        <div class="question-content-title">판매 수익금은 언제 포인트로 들어오나요?</div>
+                        <div class="question-content-title">판매 수익금 출금은 어떻게 할 수 있나요?</div>
                         <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
                     </div>
                     <div class="question_content_text">
-                        {% include 'account/auth/auth_paper_3.html' %}
+                        {% include 'question/question_seller_2.html' %}
+                    </div>
+                </div>
+                <div class="question_content_each">
+                    <div class="question-content-title-wrapper">
+                        <img src="/static/img/search.png">
+                        <div class="question-content-title">서비스 등록을 하면 언제 승인이 나나요?</div>
+                        <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="question_content_text">
+                        {% include 'question/question_seller_3.html' %}
+                    </div>
+                </div>
+                <div class="question_content_each">
+                    <div class="question-content-title-wrapper">
+                        <img src="/static/img/search.png">
+                        <div class="question-content-title">서비스 등록 후 구매자(광고주)가 생기면 어떻게 알 수 있나요?</div>
+                        <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="question_content_text">
+                        {% include 'question/question_seller_4.html' %}
+                    </div>
+                </div>
+                <div class="question_content_each">
+                    <div class="question-content-title-wrapper">
+                        <img src="/static/img/search.png">
+                        <div class="question-content-title">서비스 정렬 기준은 어떻게 되나요?</div>
+                        <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="question_content_text">
+                        {% include 'question/question_seller_5.html' %}
+                    </div>
+                </div>
+                <div class="question_content_each">
+                    <div class="question-content-title-wrapper">
+                        <img src="/static/img/search.png">
+                        <div class="question-content-title">포스팅 서비스 판매는 어떻게 할 수 있나요?</div>
+                        <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="question_content_text">
+                        {% include 'question/question_seller_6.html' %}
+                    </div>
+                </div>
+                <div class="question_content_each">
+                    <div class="question-content-title-wrapper">
+                        <img src="/static/img/search.png">
+                        <div class="question-content-title">소셜업 게이지는 어떻게 산출되나요?</div>
+                        <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="question_content_text">
+                        {% include 'question/question_seller_7.html' %}
                     </div>
                 </div>
             </div>
