--- a/templates/account/dashboard_purchase.html
+++ b/templates/account/dashboard_purchase.html
@@ -101,69 +101,83 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                 $('.billing-info .total h1').html(_total).digits();
             });
 
+            // 결제하기 버튼
             $('.dashboard-purchase-bill .dashboard-charge-button').on('click', function (e) {
                 var is_checked = $('.pay-info .pay-option input[type="radio"]').is(':checked');
                 if (is_checked === true) {
-                    var buyer_name = $('.buyer-info input[name="name"]').val();
-                    var buyer_phone = $('.buyer-info input[name="phone"]').val();
-                    var buyer_type = $('.pay-info .pay-option input:checked').val();
-
-                    $.ajax({
-                        type: 'get',
-                        data: {
-                            name: buyer_name,
-                            phone: buyer_phone
-                        }
-                    });
-
-                    if (buyer_name !== '' && buyer_phone !== '') {
-                        var mileage_info = $('.pay-info .discount #mileage').autoNumeric('get');
-                        var point_info = $('.pay-info .discount #point').autoNumeric('get');
-                        var order_info = "{{ order.order_id }}";
-
-                        var total_info = AjaxGetTransaction(e, order_info, mileage_info, point_info, buyer_type);
-                        var purchase_name = '';
-                        if ($('.item').length == 1) {
-                            purchase_name = $.trim($('.item .item-title').text());
-                        } else {
-                            purchase_name = $.trim($('.item:first-child .item-title').text()) + ' 외 ' + ($('.item').length-1).toString() + '개';
-                        }
-
-                        if (total_info !== '') {
-                            if (total_info > 0) {
-                                IMP.request_pay({
-                                    pg: 'html5_inicis',
-                                    escrow: false,
-                                    digital: true,
-                                    pay_method: buyer_type,
-                                    merchant_uid: order_info,
-                                    name: '[소셜업]' + purchase_name,
-                                    amount: total_info,
-                                    buyer_email: "{{ user.email }}",
-                                    buyer_name: buyer_name,
-                                    buyer_tel: buyer_phone
-                                }, function (rsp) {
-                                    if (rsp.success) {
-                                        //var msg = '결제가 완료되었습니다.';
-                                        //msg += '고유ID : ' + rsp.imp_uid;
-                                        //msg += '상점 거래ID : ' + rsp.merchant_uid;
-                                        //msg += '결제 금액 : ' + rsp.paid_amount;
-                                        //msg += '카드 승인번호 : ' + rsp.apply_num;
-                                        //console.log(msg);
-                                        ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
-                                    } else {
-                                        var msg = '결제에 실패하였습니다.';
-                                        msg += '에러내용 : ' + rsp.error_msg;
-                                        alert(msg);
-                                        post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
-                                    }
-                                });
-                            } else {
-
-                            }
-                        }
+                    var mileage = $('.pay-info .discount #mileage').val();
+                    var point = $('.pay-info .discount #point').val();
+                    var total = parseInt({{ order.order_total }}) - parseInt(mileage) - parseInt(point);
+                    var radio_val =  $('.pay-info .pay-option input[type="radio"]:checked').val();
+                    if (total !== 0 && radio_val === 'point') {
+                        alert('전체 결제금액이 0원일 때만 선택가능합니다. 다른 결제정보를 선택해주세요');
                     } else {
-                        alert('결제자 정보를 입력해주세요.');
+                        var buyer_name = $('.buyer-info input[name="name"]').val();
+                        var buyer_phone = $('.buyer-info input[name="phone"]').val();
+                        var buyer_type = $('.pay-info .pay-option input:checked').val();
+
+                        $.ajax({
+                            type: 'get',
+                            data: {
+                                name: buyer_name,
+                                phone: buyer_phone
+                            }
+                        });
+
+                        if (buyer_name !== '' && buyer_phone !== '') {
+                            var mileage_info = $('.pay-info .discount #mileage').autoNumeric('get');
+                            var point_info = $('.pay-info .discount #point').autoNumeric('get');
+                            var order_info = "{{ order.order_id }}";
+
+                            var total_info = AjaxGetTransaction(e, order_info, mileage_info, point_info, buyer_type);
+                            var purchase_name = '';
+                            if ($('.item').length == 1) {
+                                purchase_name = $.trim($('.item .item-title').text());
+                            } else {
+                                purchase_name = $.trim($('.item:first-child .item-title').text()) + ' 외 ' + ($('.item').length-1).toString() + '개';
+                            }
+
+                            if (total_info !== '') {
+                                if (total_info > 0) {
+                                    IMP.request_pay({
+                                        pg: 'html5_inicis',
+                                        escrow: false,
+                                        digital: true,
+                                        pay_method: buyer_type,
+                                        merchant_uid: order_info,
+                                        name: '[소셜업]' + purchase_name,
+                                        amount: total_info,
+                                        buyer_email: "{{ user.email }}",
+                                        buyer_name: buyer_name,
+                                        buyer_tel: buyer_phone
+                                    }, function (rsp) {
+                                        if (rsp.success) {
+                                            //var msg = '결제가 완료되었습니다.';
+                                            //msg += '고유ID : ' + rsp.imp_uid;
+                                            //msg += '상점 거래ID : ' + rsp.merchant_uid;
+                                            //msg += '결제 금액 : ' + rsp.paid_amount;
+                                            //msg += '카드 승인번호 : ' + rsp.apply_num;
+                                            //console.log(msg);
+                                            ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
+                                        } else {
+                                            var msg = '결제에 실패하였습니다.';
+                                            msg += '에러내용 : ' + rsp.error_msg;
+                                            alert(msg);
+                                            post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
+                                        }
+                                    });
+                                }
+                                else if (total_info === 0){
+                                    alert("결제가 완료되었습니다.");
+                                    window.location.href='/dashboard/purchase/success'
+                                }
+                                else {
+
+                                }
+                            }
+                        } else {
+                            alert('결제자 정보를 입력해주세요.');
+                        }
                     }
                 } else {
 {#                    if (true) {#}
