--- a/templates/account/dashboard_sidebar.html
+++ b/templates/account/dashboard_sidebar.html
@@ -49,7 +49,7 @@
             <ul>
                 <li><a href="{% url 'product_upload' %}">- 상품등록</a></li>
                 <li><a href="{% url 'product_manage' %}">- 상품관리</a></li>
-                <li><a href="{% url 'product_order_manage' %}">- 주문 / 판매관리</a></li>
+                <li><a href="{% url 'product_order_manage' %}">- 판매관리</a></li>
                 <li><a href="{% url 'product_profit_manage' %}">- 정산 / 수익관리</a></li>
             </ul>
         </div>
