--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -52,7 +52,7 @@
 {% block dashboard_content %}
     <div class="dashboard-content">
         <div class="dashboard-nav">
-            주문 / 판매관리
+            판매관리
             <div class="premium">
                 프리미엄 신청
             </div>
