--- a/templates/header.html
+++ b/templates/header.html
@@ -3,27 +3,37 @@
     <div class="inner">
         <div id="logo">
             <a href="{% url 'home' %}">
-                <img src="{% static 'img/logo.png' %}">
+                <img src="{% static 'img/ver1.5/logo.png' %}">
             </a>
+        </div>
+        <div class="header_search">
+            <form>
+                <input type="text" placeholder="원하는 SNS 정보를 입력해주세요. 예) 맛집, 뷰티"/>
+                <div class="header_search_btn">
+                    <input type="image" src="/static/img/search.png">
+                </div>
+            </form>
         </div>
         <div id="header_tnb">
             {% if user.is_authenticated %}
-                <a id="point" href="{% url 'point_history' %}">
-                    POINT <span id="money">{{ user.point }}</span>
+                <a id="cart" href="{% url 'cart' %}">
+                    <img src="{% static 'img/ver1.5/cart.png' %}">
                 </a>
                 <a id="message" href="{% url 'message_lounge' %}">
-                    MESSAGE <span class="unread-message-counter"></span>
-                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <img src="{% static 'img/ver1.5/message.png' %}">
+                </a>
+                <a id="notification" href="{% url 'message_lounge' %}">
+                    <img src="{% static 'img/ver1.5/bell.png' %}">
                 </a>
                 <a id="header-profile" href="#">
                     <img class="profile-image" src="{{ user.get_avatar }}">
                 </a>
             {% else %}
-                <a id="signup" href="{% url 'account_signup' %}">
-                    회원가입
-                </a>
                 <a id="login" href="{% url 'account_login' %}">
-                    로그인
+                    LOGIN
+                </a>
+                <a id="signup" href="{% url 'account_signup' %}">
+                    JOIN
                 </a>
             {% endif %}
         </div>
@@ -41,11 +51,35 @@
             <div class="header-menu">판매<span><i class="fa fa-caret-down" aria-hidden="true"></i></span></div>
             <div class="header-sub-menu seller">
                 <a href="{% url 'product_manage' %}">- 상품관리</a>
-                <a href="{% url 'product_order_manage' %}">- 주문 / 판매 관리</a>
+                <a href="{% url 'product_order_manage' %}">- 판매 관리</a>
                 <a href="{% url 'product_profit_manage' %}">- 정산 / 수익 관리</a>
             </div>
             <a href="{% url 'change_info' %}">계정설정</a>
             <a href="{% url 'account_logout' %}">로그아웃</a>
         </div>
     </div>
+</div>
+<div class="header_navigation">
+    <ul>
+        <li>
+            <button>
+                블로그
+            </button>
+        </li>
+        <li>
+            <button>
+                페이스북
+            </button>
+        </li>
+        <li>
+            <button>
+                인스타그램
+            </button>
+        </li>
+        <li>
+            <button>
+                카카오스토리
+            </button>
+        </li>
+    </ul>
 </div>
